--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Odin Landing Page</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+        </style> 
 </head>
 <body>
     <div class="header">
@@ -13,7 +16,7 @@
         <a href="">header link three</a>
     </div>
 
-<div class="intro">
+<div class="hero">
 <h1>This website is awesome</h1>
 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
 <button>Sign up</button>
