add images, change copy

--- a/index.html
+++ b/index.html
@@ -3,54 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Odin Landing Page</title>
+    <title>Cool Board Games</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
         </style> 
 </head>
 <body>
     <div class="header">
-        <h3> Header Logo</h3>
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
+        <h3> Meeple Things</h3>
+        <a href="">About</a>
+        <a href="">Shop</a>
+        <a href="">Contact</a>
     </div>
 
 <div class="hero">
-<h1>This website is awesome</h1>
-<p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+<h1>Board Games are Awesome!</h1>
+<p> With so many games to choose from, where do you start? Join our fun community for suggestions and online gaming!</p>
 <button>Sign up</button>
-<img src="">
+<img src="/Images/meeples.jpg" alt="Photo of 3 meeples. Credit: Unsplash" width="300px"> 
 </div>
 
 <div class="info">
-    <h2> Some random information</h2>
+    <h2> Discover our games of the month</h2>
         <div class="image-text">
-            <img src="">
-            <p>this is some subtext under an illustration or image</p>
+            <img src="/Images/mystery.jpg" alt="Puzzle games. Credit: Unsplash" width="200px">
+            <p> Prepared to solve a mystery? </p>
         </div>
         <div class="image-text">
-            <img src="">
-            <p>this is some subtext under an illustration or image</p>
+            <img src="/Images/strategy.jpg" alt="A game of Catan. Credit: Unsplash">
+            <p> Will you have the best strategy? </p>
         </div>
         <div class="image-text">
-            <img src="">
-            <p>this is some subtext under an illustration or image</p>
+            <img src="/Images/lucky.jpg" alt="Bunch of coloured dice. Credit: Unsplash">
+            <p> Feeling lucky? </p>
         </div>
         <div class="image-text">
-            <img src="">
-            <p>this is some subtext under an illustration or image</p>
+            <img src="/Images/cards.jpg" alt="People playing Uno. Credit: Unsplash">
+            <p> Can you play your cards right? </p>
         </div>
 </div>
 
 <div class="quote">
-    <h2> This in an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h2>
-    <h3>-Thor, God of Thunder</h3>
+    <h2>  Money can't buy happiness, but it can buy board games, and that's good enough.</h2>
+    <h3>- Famous Gamer</h3>
 </div>
 
 <div class="cta">
-    <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button right over there!</p>
+    <h3> Join the other meeples! It's time!</h3>
+    <p>Be part of a friendly gaming community</p>
     <button>Sign up</button>
 </div>
 
